--- a/app/locale/en_US/template/email/wapone/order_status_notifier.html
+++ b/app/locale/en_US/template/email/wapone/order_status_notifier.html
@@ -1,4 +1,4 @@
-<!--@subject {{var store.getFrontendName()}}: Order Status Notifier # {{var order.increment_id}} @-->
+<!--@subject Order Status Notifier: {{var store.getFrontendName()}}, Order #{{var order.increment_id}} @-->
 
 <!--@styles
 body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif; }
@@ -18,12 +18,12 @@ body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif;
                     <tr>
                         <td valign="top">
                             <p style="font-size:12px; line-height:16px; margin:0;">
-                                <b><u>Nota</u>: questo ordine &egrave; stato appena effettuato. Il cliente {{htmlescape var=$order.getCustomerName()}} ({{var order.customer_email}}) {{var frase_stato_ordine}}</b>
+                                <b>{{htmlescape var=$order.getCustomerName()}} ({{var order.customer_email}}) has changed order status in: {{var order_status}}</b>
                             </p>
                     </tr>
                     <tr>
                         <td>
-                            <h2 style="font-size:18px; font-weight:normal; margin:0;">Order # {{var order.increment_id}} <small>(placed on {{var order.getCreatedAtFormated('long')}})</small></h2>
+                            <h2 style="font-size:18px; font-weight:normal; margin:0;">Order #{{var order.increment_id}} <small>(placed on {{var order.getCreatedAtFormated('long')}})</small></h2>
                         </td>
                     </tr>
                     <tr>
@@ -31,9 +31,9 @@ body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif;
                             <table cellspacing="0" cellpadding="0" border="0" width="650">
                                 <thead>
                                 <tr>
-                                    <th align="left" width="325" bgcolor="#EAEAEA" style="font-size:13px; padding:5px 9px 6px 9px; line-height:1em;">Informazioni di fatturazione:</th>
+                                    <th align="left" width="325" bgcolor="#EAEAEA" style="font-size:13px; padding:5px 9px 6px 9px; line-height:1em;">Billing Information:</th>
                                     <th width="10"></th>
-                                    <th align="left" width="325" bgcolor="#EAEAEA" style="font-size:13px; padding:5px 9px 6px 9px; line-height:1em;">Metodo di pagamento:</th>
+                                    <th align="left" width="325" bgcolor="#EAEAEA" style="font-size:13px; padding:5px 9px 6px 9px; line-height:1em;">Payment Method:</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -53,9 +53,9 @@ body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif;
                             <table cellspacing="0" cellpadding="0" border="0" width="650">
                                 <thead>
                                 <tr>
-                                    <th align="left" width="325" bgcolor="#EAEAEA" style="font-size:13px; padding:5px 9px 6px 9px; line-height:1em;">Informazioni di spedizione:</th>
+                                    <th align="left" width="325" bgcolor="#EAEAEA" style="font-size:13px; padding:5px 9px 6px 9px; line-height:1em;">Shipping Information:</th>
                                     <th width="10"></th>
-                                    <th align="left" width="325" bgcolor="#EAEAEA" style="font-size:13px; padding:5px 9px 6px 9px; line-height:1em;">Metodo di spedizione:</th>
+                                    <th align="left" width="325" bgcolor="#EAEAEA" style="font-size:13px; padding:5px 9px 6px 9px; line-height:1em;">Shipping Method:</th>
                                 </tr>
                                 </thead>
                                 <tbody>
